@@ -31,7 +31,7 @@ void init_queue() {
 void basic_test_with_empty_queue() {
   init_queue();
   FastAccelStepper s = FastAccelStepper();
-  s.init(0, 0);
+  s.init(NULL, 0, 0);
   RampChecker rc = RampChecker();
   assert(0 == s.getCurrentPosition());
 
@@ -74,7 +74,7 @@ void test_with_pars(const char *name, int32_t steps, uint32_t travel_dt,
          steps, travel_dt, accel, reach_max_speed ? "CW" : "CCW");
   init_queue();
   FastAccelStepper s = FastAccelStepper();
-  s.init(0, 0);
+  s.init(NULL, 0, 0);
   RampChecker rc = RampChecker();
   assert(0 == s.getCurrentPosition());
 
