@@ -1,3 +1,6 @@
+pre 0.14.0:
+- Direction pins can be shared by several steppers
+
 0.13.4:
 - Automated github test identified a compile error introduced in 0.13.3
 
